# newmodel

./: Dockerfile  README.md  app.py  course_interests_refined.csv  initial_model.py  pyproject.toml  requirements.txt  setup.py
